# surfelwarp

./: CMakeLists.txt  cuda_macro.txt
apps/surfelwarp_app/: CMakeLists.txt  RealSenseFetch.cpp  RealSenseFetch.h  main.cpp
cmake/: FindGLFW3.cmake  Findrealsense2.cmake
common/: CMakeLists.txt
core/: CMakeLists.txt  SurfelWarpSerial.cpp  SurfelWarpSerial.h
core/render/: GLRenderedMaps.cpp  Renderer.cpp  Renderer.h  RendererDraw.cpp
imgproc/: ImageProcessor.cpp
test_data/: boxing_config.json
